--- a/war/404.html
+++ b/war/404.html
@@ -1,5 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=ISO-8859-1"
-	pageEncoding="ISO-8859-1"%>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,9 +9,10 @@
 <meta name="description"
 	content="IgniteMSIT would be the first, to ever host an Ignite Talk in Delhi-NCR. We target a selected audience of 350 budding revolutionists to be a part of this inspiring event. The speakers are from varied domains, sharing their views, ideas and experiences to the fullest, in the minimum amount of time. The event will be held at Auditorium,MSIT,Delhi,India on 30.03.2016">
 <META NAME="ROBOTS" CONTENT="INDEX, FOLLOW">
-<title>Ignite MSIT: Register</title>
+<title>Page Not Found</title>
 <meta name="description" content="">
 <meta name="author" content="">
+
 
 <!-- Bootstrap -->
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
@@ -55,6 +54,18 @@
 
 </head>
 <body>
+	<div id="fb-root"></div>
+	<script>
+		(function(d, s, id) {
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id))
+				return;
+			js = d.createElement(s);
+			js.id = id;
+			js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=1453946961575719";
+			fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+	</script>
 	<div id="preloader">
 		<div id="status">
 			<img src="img/preloader.gif" height="64" width="64" alt="">
@@ -72,7 +83,8 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="Index.jsp">Ignite MSIT</i><strong></strong></a>
+				<a class="navbar-brand" href="Index.jsp"> <img
+					src="img/logo.png" alt="Logo" style="width: 3em; height: 100%;"></a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -85,7 +97,7 @@
 					<li><a href="Index.jsp#about-section" class="page-scroll">About</a></li>
 					<li><a href="Index.jsp#testimonials-section"
 						class="page-scroll">Register</a></li>
-					<li><a href="team.html" class="active">Team</a></li>
+					<li><a href="team.html">Team</a></li>
 					<li><a href="Index.jsp#contact-section" class="page-scroll">Contact</a></li>
 				</ul>
 			</div>
@@ -96,20 +108,17 @@
 
 	<!-- Header -->
 	<header> </header>
-	<div id="team-section" class="text-center">
+	<div id="testimonials-section"
+		style="padding-bottom: 5vh; height: 90vh;">
 		<div class="container">
-			<div class="section-title wow fadeInDown">
+			<div class="section-title text-center wow fadeInDown">
 				<h2>
-					<strong>Register</strong>
+					<strong>Page Not Found</strong><br> <br> <br> Error
+					Code: 404.<br> <br> Please Contact the Administrator for
+					Further Information.
 				</h2>
 				<hr>
 				<div class="clearfix"></div>
-			</div>
-			<div id="row">
-				<iframe
-					src="https://docs.google.com/forms/d/1T6vvgSQv8NrmAdkFQU99rz-Lf6NSjH_i1zur8AkGzxw/viewform?embedded=true"
-					width="100%" height="500" frameborder="0" marginheight="0"
-					marginwidth="0">Loading...</iframe>
 			</div>
 		</div>
 	</div>
@@ -135,7 +144,6 @@
 	<script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
 	<script type="text/javascript" src="js/contact_me.js"></script>
 	<script type="text/javascript" src="js/owl.carousel.js"></script>
-
 	<!-- Javascripts
     ================================================== -->
 	<script type="text/javascript" src="js/main.js"></script>
