--- a/war/team.html
+++ b/war/team.html
@@ -2,23 +2,17 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords"
-	content="Ignite MSIT Maharaja Surajmal Institute of Technology New Delhi NCR first talk event IgniteMSIT 30 March 2016 Diwakar Vaish speaker Abhas mitra vishwas mudagal Pulkit Kumar organizer ignitemsit.com best event of msit">
+	content="Ignite MSIT Maharaja Surajmal Institute of Technology New Delhi NCR first talk event IgniteMSIT 30 March 2016 Diwakar Vaish speaker Abhas mitra vishwas mudagal ignitemsit.com best event of msit">
 <meta name="description"
 	content="IgniteMSIT would be the first, to ever host an Ignite Talk in Delhi-NCR. We target a selected audience of 350 budding revolutionists to be a part of this inspiring event. The speakers are from varied domains, sharing their views, ideas and experiences to the fullest, in the minimum amount of time. The event will be held at Auditorium,MSIT,Delhi,India on 30.03.2016">
-<title>Ignite MSIT: Delhi-NCR's first Ignite Event!</title>
+<META NAME="ROBOTS" CONTENT="INDEX, FOLLOW">
+<title>Meet The Team</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
-<!-- Favicons
-    ================================================== -->
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-<link rel="apple-touch-icon" sizes="72x72"
-	href="img/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="114x114"
-	href="img/apple-touch-icon-114x114.png">
 
 <!-- Bootstrap -->
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
@@ -41,12 +35,23 @@
 	rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="js/modernizr.custom.js"></script>
 
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<script>
+	(function(i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r;
+		i[r] = i[r] || function() {
+			(i[r].q = i[r].q || []).push(arguments)
+		}, i[r].l = 1 * new Date();
+		a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+		a.async = 1;
+		a.src = g;
+		m.parentNode.insertBefore(a, m)
+	})(window, document, 'script', '//www.google-analytics.com/analytics.js',
+			'ga');
+
+	ga('create', 'UA-74431622-1', 'auto');
+	ga('send', 'pageview');
+</script>
+
 </head>
 <body>
 	<div id="preloader">
@@ -55,7 +60,7 @@
 		</div>
 	</div>
 	<nav id="menu" class="navbar navbar-default navbar-fixed-top">
-		<div class="container" style="height: 6em">
+		<div class="container">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed"
@@ -65,7 +70,7 @@
 						class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="Index.jsp"> <img
-					src="img/logo.png" alt="Logo" style="width: 5em; height: 3em"></a>
+					src="img/logo.png" alt="Logo" style="width: 3em; height: 100%;"></a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -108,9 +113,12 @@
 							<h3>Pulkit</h3>
 							<p>Organizer</p>
 							<ul class="list-inline">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								<li><a href="http://facebook.com/pulkit.kr009"><i
+										class="fa fa-facebook"></i></a></li>
+								<li><a href="http://twitter.com/ispulkit"><i
+										class="fa fa-twitter"></i></a></li>
+								<li><a href="http://linkedin.com/in/pulkitkr"><i
+										class="fa fa-linkedin"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -124,9 +132,8 @@
 							<h3>Harshit</h3>
 							<p>Production</p>
 							<ul class="list-inline">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								<li><a href="https://www.facebook.com/harshit.narang.7"><i
+										class="fa fa-facebook"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -140,9 +147,8 @@
 							<h3>Manish</h3>
 							<p>Production</p>
 							<ul class="list-inline">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								<li><a href="https://www.facebook.com/manishrawat911"><i
+										class="fa fa-facebook"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -157,8 +163,6 @@
 							<p>Production</p>
 							<ul class="list-inline">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -172,9 +176,11 @@
 							<h3>Vidhi</h3>
 							<p>Production</p>
 							<ul class="list-inline">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								<li><a href="https://www.facebook.com/vidhi.ravra"><i
+										class="fa fa-facebook"></i></a></li>
+								<li><a
+									href="https://www.linkedin.com/m/profile/ACoAABX_uxwBbhjij_9ntF5CFz1stX9y6p2gkvI/"><i
+										class="fa fa-linkedin"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -187,9 +193,9 @@
 							<h3>Amandeep</h3>
 							<p>Logistics</p>
 							<ul class="list-inline">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								<li><a
+									href="https://www.facebook.com/profile.php?id=100002356750862&fref=ts"><i
+										class="fa fa-facebook"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -203,9 +209,8 @@
 							<h3>Anchit</h3>
 							<p>Designer</p>
 							<ul class="list-inline">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								<li><a href="https://www.facebook.com/anchit.aggarwal.9"><i
+										class="fa fa-facebook"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -217,11 +222,15 @@
 							class="img-circle team-img">
 						<div class="caption">
 							<h3>Danish</h3>
-							<p>Web Designer</p>
+							<p>Web Development</p>
 							<ul class="list-inline">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								<li><a href="https://www.facebook.com/DaNish.AnSari.1994"><i
+										class="fa fa-facebook"></i></a></li>
+								<li><a href="https://twitter.com/DaNish_AnSari94"><i
+										class="fa fa-twitter"></i></a></li>
+								<li><a
+									href="https://www.linkedin.com/in/danish-kamal-47632622?trk=hp-identity-name"><i
+										class="fa fa-linkedin"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -235,9 +244,11 @@
 							<h3>Devika</h3>
 							<p>Curation</p>
 							<ul class="list-inline">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								<li><a href="https://m.facebook.com/devika.mehra.5"><i
+										class="fa fa-facebook"></i></a></li>
+								<li><a
+									href="https://www.linkedin.com/m/profile/ACoAABQIvWABOO2tOCUtWZwQwZgu6vBUWx_Y3cU/"><i
+										class="fa fa-linkedin"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -251,9 +262,8 @@
 							<h3>Parul</h3>
 							<p>Publicity</p>
 							<ul class="list-inline">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								<li><a href="https://www.facebook.com/parul.kashyap.31"><i
+										class="fa fa-facebook"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -268,8 +278,6 @@
 							<p>Publicity</p>
 							<ul class="list-inline">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 							</ul>
 						</div>
 					</div>
