--- a/war/404.html
+++ b/war/404.html
@@ -62,11 +62,11 @@
     <![endif]-->
 </head>
 <body>
-	<!-- BEGAIN PRELOADER 
+	<!-- BEGAIN PRELOADER  -->
 	<div id="preloader">
 		<div class="loader">&nbsp;</div>
 	</div>
-	 END PRELOADER -->
+	<!-- END PRELOADER -->
 
 	<!-- SCROLL TOP BUTTON -->
 	<a class="scrollToTop" href="#"><i class="fa fa-chevron-up"></i></a>
